test/compilable/imports/test10552.d
module imports.test10552;

enum { public a, private b, c }
