test/fail_compilation/fail8.d

struct Foo { int x; }

enum Bar : Foo { a, b, c }
